Fix footer's styling causing unintended white space, right side.

--- a/src/styles/AppPage.css
+++ b/src/styles/AppPage.css
@@ -1,3 +1,7 @@
+/* * {
+  border: solid 2px red;
+} */
+
 body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
@@ -124,7 +128,6 @@ footer {
   position: relative;
   margin-top: 1.5rem;
   height: 1.5rem;
-  width: 100vw;
   color: white;
   padding: 0 1rem;
 
